--- a/Flask API - Projet Python/templates/result.html
+++ b/Flask API - Projet Python/templates/result.html
@@ -11,9 +11,22 @@
 
 
 <body>
-<fieldset>      
-    <legend>This is the Result !</legend>
-    {{drug}}
+<fieldset>
+    <legend>Results : </legend>
+    <ul>
+    <li>{{drug1}}</li>
+    <li>{{drug2}}</li>
+    <li>{{drug3}}</li>
+    <li>{{drug4}}</li>
+    <li>{{drug5}}</li>
+    <li>{{drug6}}</li>
+    <li>{{drug7}}</li>
+    <li>{{drug8}}</li>
+    <li>{{drug9}}</li>
+    <li>{{drug10}}</li>
+    <li>{{drug11}}</li>
+    <li>{{drug12}}</li>
+    </ul>
 </fieldset>
 <button onclick="window.location.href='http://localhost:5000/';">
     Go back to the form
