--- a/Flask API - Projet Python/static/css/main.css
+++ b/Flask API - Projet Python/static/css/main.css
@@ -8,29 +8,34 @@ body {
     width: 100%;
     font-size: 1rem;
     line-height:1rem;
+    border-radius: 5px;
   }
 
   input {
-    padding-top: 0.25rem;
+    padding-top: 0.5rem;
     padding-bottom: 0.25rem;
+    border-radius: 10px;
   }
 
   fieldset {
-    margin-top: 0.75rem;
-    margin-bottom: 0.75rem;
+    margin-top: 1.5rem;
+    margin-bottom: 1.5rem;
     border: none;
     box-shadow: 0px 0px 2px rgba(0,0,0,1);
     background-color: rgb(240,240,240);
+    border-radius: 15px;
+    padding :1.5rem;
   }
 
   legend, button {
     background-color: rgb(17, 102, 158);
-    padding: 0.75rem;
+    padding: 1rem 3rem;
     font-size: 1.3rem;
     color: white;
     text-shadow: 1px 1px 1px rgba(0,0,0,0.5);
     transform: translateX(-1.1rem);
     box-shadow: -1px 1px 1px rgba(0,0,0,0.8);
+    border-radius:5px;
   }
 
 
@@ -46,10 +51,34 @@ body {
     position:absolute;
     left:-0.075rem;
     bottom: -0.45rem;
+
   }
 
-#title {
+h1{
   color:"white";
-  background-color: rgb(17, 102, 158);
   padding: 2rem;
+  border-radius: 30px;
+}
+
+#sendButton{
+  padding :1rem;
+  margin-top : 1rem;
+  margin-bottom:2rem;
+  font-size: 1.5rem;
+}
+
+li{
+  padding:0.25rem;
+  font-size:1.1rem;
+}
+
+#title{
+  color:white;
+  padding: 2rem;
+  border-radius: 30px;
+  font-size:2.25rem;
+  background-color: rgb(17, 102, 158);
+  border: solid gray;
+  border-width: 2px;
+  margin:3rem 0;
 }
