--- a/Flask API - Projet Python/templates/form.html
+++ b/Flask API - Projet Python/templates/form.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<link rel= "stylesheet" type= "text/css" href= "{{ url_for('static',filename='css/main.css') }}">
+<link rel= "stylesheet"  href= "{{ url_for('static',filename='css/main.css') }}">
 
 
 <head>
@@ -137,7 +137,7 @@
 
         </fieldset>
 
-        <input type="submit" value="Estimate">
+        <input class="sendButton" type="submit" value="Estimate">
     </form>
 </body>
 </html>
