--- a/Flask API - Projet Python/templates/home.html
+++ b/Flask API - Projet Python/templates/home.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" type="image/png" sizes="16x16" href="../static/css/images/logo Esilv.png">
-    <title>Drugged Estimator</title>
+    <title>Drug consumption project</title>
 </head>
 <body>
 <h1 id ="title" align="center">Project python for data analysis</h1>
