--- a/Flask API - Projet Python/templates/ppt_report.html
+++ b/Flask API - Projet Python/templates/ppt_report.html
@@ -1,3 +1,7 @@
+<head>
+  <link rel="icon" type="image/png" sizes="16x16" href="../static/css/images/logo Esilv.png">
+  <title>Powerpoint report</title>
+</head>
 <iframe src="https://onedrive.live.com/embed?cid=23D7EBF01D129D3D&resid=23D7EBF01D129D3D%2123674&authkey=ABf4MC8YwmElhoI&em=2" style="position:fixed; top:0; left:0; bottom:0; right:0; width:100%; height:100%; border:none; margin:0; padding:0; overflow:hidden; z-index:999999;">
     Your browser doesn't support iframes
 </iframe>
